# WhatShouldICharge

./: .gitignore  .replit  AGENTS.md  CLAUDE.md  auth.py  billing.py  cache.py  database.py  estimates.db  main.py  nixpacks.toml  pricing.py  pyproject.toml  replit.md  requirements.txt  sendgrid_email.py  skills-lock.json
alembic/: env.py
attached_assets/: Pasted-Build-a-professional-marketing-landing-page-for-WhatSho_1772865113322.txt  Pasted-Fix-how-unconfirmed-special-fee-items-are-handled-The-c_1772871712581.txt  Pasted-Fix-the-two-pass-estimation-system-Pass-2-must-receive-_1772871249873.txt  Pasted-I-need-you-to-upgrade-this-app-to-full-feature-parity-w_1772867328019.txt  Pasted-I-want-to-build-a-copy-of-an-existing-app-called-WhatSh_1772863107184.txt  Pasted-Simplify-the-special-fee-system-completely-Remove-all-f_1772872364965.txt  Pasted-Update-the-AI-estimation-prompt-in-main-py-with-these-r_1772865779616.txt  Pasted-Yes-this-is-a-great-idea-and-very-buildable-Here-s-exac_1772869873610.txt  WSIC_Master_Document_March2026_1773120261119.docx
models/: __init__.py
services/: __init__.py  estimation_pipeline.py  industry_config.py  vision_providers.py  volume_lookup.py
static/: admin.html  customer-estimate.html  index.html  landing.css  landing.html  library.html  login.html  payment-success.html  privacy.html  reset-password.html  robots.txt  signup.html  sitemap.xml  team-login.html  team.html  terms.html  upgrade.html  widget.js
static/blog/: blog.css  index.html  (+5 more)
tasks/: lessons.md  todo.md
tests/: .gitignore  run_volume_tests.py  test_billing.py  test_calculate_price.py  test_volume_lookup.py
(+11 files in other folders)
